# zinc-downloader

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pypi.yml
src/zincdl/: __init__.py  cli.py  core.py  defaults.py  download.py  tranche_mappings.py  utils.py
tests/: test_cli.py
